--- a/docs/css/materialize.css
+++ b/docs/css/materialize.css
@@ -2679,7 +2679,14 @@ a {
 .divider {
   height: 1px;
   overflow: hidden;
-  background-color: #e0e0e0;
+  background-color: #b0b0b0;
+}
+
+.short_divider {
+  height: 1px;
+  margin-bottom: 10px;
+  overflow: hidden;
+  background-color: #d0d0d0;
 }
 
 blockquote {
